--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 problem-solving/HackerRank/Amazon
 problem-solving/Codility/Microsoft
+problem-solving/HackerRank/Uber
+problem-solving/Codility/Google
 .vscode
 test*
